# luminal

./: .gitignore  AGENTS.md  BUGFIX_TRAINING_CONVERGENCE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
benches/: nn_ops.rs
crates/luminal_2/: Cargo.toml
crates/luminal_2/src/: code.lisp  codegen.rs  cuda_tests.rs  debug.rs  e2e_tests.rs  egraph_debugger.rs  extract.rs  lib.rs  run.rs  translate.rs  utils.rs
crates/luminal_cpu/: Cargo.toml
crates/luminal_cuda/: Cargo.toml
crates/luminal_cuda/src/: elementwise_fusion.rs  lib.rs  prim.rs  unified.rs  verification_tests.rs
crates/luminal_cuda/src/tests/: fp16.rs  fp32.rs
crates/luminal_metal/: Cargo.toml
crates/luminal_metal/src/: binary.rs  elementwise_fusion.rs  lib.rs  prim.rs  quantized.rs  storage_buffer.rs  unified.rs  verification_tests.rs
crates/luminal_metal/src/tests/: fp16.rs  fp32.rs
crates/luminal_nn/: Cargo.toml  README.md
crates/luminal_nn/src/: convolution.rs  dropout.rs  lib.rs  norm.rs  pooling.rs  recurrent.rs  utils.rs
crates/luminal_training/: Cargo.toml
crates/luminal_training/src/: lib.rs  optimizer.rs  scheduler.rs
demos/: README.md
demos/flash_attention/: Cargo.toml
demos/flash_attention/src/: main.rs
demos/matmul/: Cargo.toml
demos/matmul/src/: main.rs
docs/: IMPLEMENTATION_PLAN.md
examples/llama/: Cargo.toml
examples/llama/src/: model.rs
examples/luminal_2_demo/: Cargo.toml  README.md
examples/luminal_2_demo/src/: benchmark.rs  main.rs
examples/mnist_cnn/: Cargo.toml  setup.sh
examples/mnist_cnn/src/: main.rs
examples/phi/: Cargo.toml
examples/phi/src/: model.rs
examples/qwen/: Cargo.toml
examples/qwen/src/: main.rs  model.rs
examples/search_demo/: Cargo.toml  README.md
examples/search_demo/src/: benchmark.rs  main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/train_math_net/: Cargo.toml
examples/train_math_net/src/: main.rs
examples/whisper/: Cargo.toml
examples/whisper/src/: audio.rs  model.rs
src/: graph.rs  lib.rs  module.rs  op.rs  unified.rs
src/hl_ops/: movement.rs
src/nn/: activation.rs  convolution.rs  dropout.rs  embedding.rs  linear.rs  norm.rs  pooling.rs  recurrent.rs  utils.rs
src/nn/transformer/: attention.rs  decoder.rs  encoder.rs  mod.rs
src/search/: backend.rs  codegen.rs  debug.rs  egraph_debugger.rs  extract.rs  mod.rs  operators.rs  run.rs  translate.rs  types.rs  utils.rs
src/training/: accumulation.rs  autograd.rs  checkpoint.rs  loss.rs  mixed_precision.rs  mod.rs  optimizer.rs  scheduler.rs
