[package]
name = "luminal"
version = "0.2.1"
edition = "2021"
rust-version = "1.78"
description = "Deep learning at the speed of light."
license = "MIT OR Apache-2.0"

[features]
default = []
# Search-based optimization (egglog)
search = [
    "dep:egglog",
    "dep:egglog-experimental",
    "dep:egglog_proof",
    "dep:egraph-serialize",
    "dep:ratatui",
    "dep:crossterm",
    "dep:libc",
    "dep:unicode-width",
    "dep:eframe",
    "dep:egui",
    "dep:anyhow",
    "dep:indexmap",
]
# Metal GPU backend (macOS only)
metal = [
    "dep:objc2",
    "dep:objc2-metal",
    "dep:objc2-foundation",
]
# CUDA GPU backend
cuda = [
    "dep:cudarc",
]

[dependencies]
# Core dependencies
itertools = "0.14.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
rand = "0.9.2"
urlencoding = "2.1.2"
webbrowser = "1.0.0"
dyn-clone = "1.0.12"
half = "*"
tinyvec = { version = "1.6.0", features = ["serde"] }
term_size = "0.3.2"
colored = "3.0.0"
regex = "1.11.1"
rustc-hash = "2.1.1"
uuid = { version = "1.7.0", features = ["v4"] }
as-any = "0.3.1"
egg = "0.9.5"
symbolic_expressions = "5.0.3"
serde = { version = "1.0.219", features = ["derive"] }
thread_local = "1.1.8"
generational-box = "0.6.2"
serde_json = "1.0.140"

# Search dependencies (optional, enabled by "search" feature)
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "0be495630546acffbd545ba60feb9302281ce95c", optional = true }
egglog-experimental = { git = "https://github.com/egraphs-good/egglog-experimental", optional = true }
egglog_proof = { git = "https://github.com/MilkBlock/egglog", rev = "e1664786863a19b05d40e30a20b961aa09ea8e2e", package = "egglog", optional = true }
egraph-serialize = { version = "0.2.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
libc = { version = "0.2.174", optional = true }
unicode-width = { version = "0.2", optional = true }
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
anyhow = { version = "1.0.99", optional = true }
indexmap = { version = "2.9.0", optional = true }

# Metal dependencies (optional, enabled by "metal" feature)
objc2 = { version = "0.6.2", optional = true }
objc2-metal = { version = "0.3.1", optional = true }
objc2-foundation = { version = "0.3.1", optional = true }

# CUDA dependencies (optional, enabled by "cuda" feature)
cudarc = { version = "0.18.1", features = ["f16", "cuda-12020"], optional = true }

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }
candle-core = "0.8"
paste = "1.0.14"
criterion = "0.5"

[[bench]]
name = "nn_ops"
harness = false

[workspace]
members = [
    "examples/*",
    "crates/luminal_cpu",
    "crates/luminal_nn",
    "crates/luminal_training",
    "crates/luminal_metal",
    "demos/flash_attention",
    "docs/company",
]
exclude = [
    "examples/yolo_v8",
    "crates/luminal_cuda",
]
