[package]
name = "luminal_2_demo"
version = "0.1.0"
edition = "2021"
description = "Demo of luminal_2 search-based CUDA compiler"


[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_training = { path = "../../crates/luminal_training" }
luminal_2 = { path = "../../crates/luminal_2" }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }

# MNIST data loading
mnist = "0.6"
rand = "0.8.5"

# For luminal_2 internals
rustc-hash = "2.0"
cudarc = { version = "0.18.1", features = ["f16", "cuda-12020"], optional = true }
petgraph = "0.6"

[features]
default = ["cuda"]
cuda = ["dep:luminal_cuda", "luminal_2/cuda", "dep:cudarc"]
metal = ["dep:luminal_metal", "luminal_2/metal"]
