[package]
name = "mnist_cnn"
version = "0.1.0"
edition = "2021"
description = "Train a CNN on MNIST using luminal"

[features]
metal = ["dep:luminal_metal"]
cuda = ["dep:luminal_cuda"]

[dependencies]
luminal = { path = "../.." }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }

# MNIST data loading
mnist = "0.6"
rand = "0.8.5"
