[package]
name = "mnist_cnn"
version = "0.2.0"
edition = "2021"
description = "Train a CNN on MNIST using luminal with optional search-based optimization"

[features]
default = []
metal = ["dep:luminal_metal", "luminal/metal"]
cuda = ["dep:luminal_cuda", "luminal/cuda"]
search = ["luminal/search", "luminal_metal?/search", "luminal_cuda?/search"]

[dependencies]
luminal = { path = "../.." }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }

# MNIST data loading
mnist = "0.6"
rand = "0.8.5"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
