[package]
name = "search_demo"
version = "0.1.0"
edition = "2021"
description = "Demo of search-based compiler"


[dependencies]
luminal = { path = "../.." }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }

# MNIST data loading
mnist = "0.6"
rand = "0.8.5"

# For search internals
rustc-hash = "2.0"
cudarc = { version = "0.18.1", features = ["f16", "cuda-12020"], optional = true }
petgraph = "0.6"

[features]
default = ["cuda"]
cuda = ["dep:luminal_cuda", "luminal/search", "luminal/cuda", "dep:cudarc"]
metal = ["dep:luminal_metal", "luminal/search", "luminal/metal"]
