[package]
name = "train_math_net"
version = "0.2.0"
edition = "2021"
description = "Train an MLP to add 4-bit numbers using luminal"

[features]
default = []
metal = ["dep:luminal_metal", "luminal/metal"]
cuda = ["dep:luminal_cuda", "luminal/cuda"]
search = ["luminal/search"]

[dependencies]
luminal = { path = "../.." }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
